--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -153,6 +153,9 @@
                 </textarea>
               </div>
             </div>
+            <div class="form-group" ng-if="model.billing_id && model.subscription_id">
+              <p class="col-md-12 text text-center"> To update your billing address (as it will appears on your RevAPM statements) please click on “Update Payment Profile” button and provide the information together with credit card details.</p>
+            </div>
             <!--
             <div class="form-group" ng-if="model.billing_id && (userService.isReseller() || userService.isRevadmin())">
               <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Billing plan">Billing Plan</label>
@@ -274,9 +277,9 @@
                 <a ng-if="model.billing_id && !!model.billing_portal_link.url && !!model.subscription_id" href="{{model.billing_portal_link.url}}" class="btn btn-primary" target="_blank" ng-disabled="_loading || _disabled" popover-trigger="mouseenter" popover="Click here to update your payment details - you will be taken to our billing portal which uses a separate URL">
                   <i class="glyphicon glyphicon-lock"></i> Update Payment Profile</a>
                 <!-- Create Billing Profile -->
-                <a href="" class="btn btn-primary" ng-if="!model.billing_id && (userService.isRevadmin() || userService.isReseller())" ng-click="createBillingProfile(model)">
+                <!-- <a href="" class="btn btn-primary" ng-if="!model.billing_id && (userService.isRevadmin() || userService.isReseller())" ng-click="createBillingProfile(model)">
                   <i class="glyphicon glyphicon-credit-card"></i> Create Billing Profile
-                </a>
+                </a> -->
                 <button ng-if="model.subscription_id" ng-click="deleteCompanyProfile(model.id)" class="btn btn-danger pull-right" ng-disabled="true || _loading || _disabled">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
                   <i class="glyphicon glyphicon-remove" ng-if="!_loading"></i>&nbsp; Delete Company Profile
