--- a/code/dev/parts/reports/charts/fbt-heatmap.html
+++ b/code/dev/parts/reports/charts/fbt-heatmap.html
@@ -25,10 +25,10 @@
 </div>
 
 <div class="alert alert-info" ng-if="_loading">
+  <p align="center">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  Loading</p>
 </div>
 
-<div id="tooltip-container" class="tooltip-container"></div>
-<div id="canvas-svg"></div>
+<div id="canvas-svg" style="position: relative;"></div>
 
