--- a/code/dev/parts/reports/charts/mobile-top-objects-time.html
+++ b/code/dev/parts/reports/charts/mobile-top-objects-time.html
@@ -16,8 +16,9 @@
 </div>
 
 <div class="alert alert-info" ng-if="_loading">
+  <p align="center">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  Loading</p>
 </div>
 
 <div ng-if="!_loading">
