--- a/code/dev/parts/reports/lm-rtt-heatmaps.html
+++ b/code/dev/parts/reports/lm-rtt-heatmaps.html
@@ -42,12 +42,12 @@
         <div class="panel-body">
 
           <div class="alert alert-info" ng-if="_loading">
+            <p style="align: center">
             <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp;
-            Loading...
+            Loading...</p>
           </div>
 
-          <div id="tooltip-container" class="tooltip-container"></div>
-          <div id="canvas-svg"></div>
+          <div id="canvas-svg" style="position: relative;"></div>
 
         </div>
       </div>
