--- a/code/dev/parts/profile/statements.html
+++ b/code/dev/parts/profile/statements.html
@@ -10,7 +10,7 @@
     <div class="row" ng-init="initStatements()">
         <div class="col-md-12">
             <div class="panel panel-default">
-                <div class="panel-heading">
+                <div class="panel-heading" ng-if="!userService.isAdmin()">
                     <div class="row">
                         <div class="col-md-12">
                             <div class="pull-left">
@@ -45,6 +45,23 @@
                         </div>
                     </div>
                 </div>
+                <div class="panel-heading"  >
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="pull-left">
+                                <h2>Billing Summary</h2>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-body">
+                  <div class="alert alert-info" ng-if="_loading">
+                    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
+                  </div>
+                  <subscription-summary   ng-if="!_loading" ng-model="summary.subscription"></subscription-summary>
+                </div>
+
+
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-md-12">
@@ -121,9 +138,9 @@
                             <th>
                                 <p>Date</p>
                             </th>
-                            <th>
+                            <!-- <th>
                                 <p>Memo</p>
-                            </th>
+                            </th> -->
                             <th>
                                 <p>Amount</p>
                             </th>
@@ -136,7 +153,7 @@
                         <tr ng-repeat="statement in statements">
                             <td><a ui-sref="^.statement({id: statement.id})">{{statement.id}}</a></td>
                             <td>{{statement.opened_at | date : 'MMM d, y h:mm:ss a'}}</td>
-                            <td>{{statement.memo}}</td>
+                            <!-- <td>{{statement.memo}}</td>  -->
                             <td>{{statement.total_in_cents/100 | currency}}</td>
                             <td>{{statement.settled_at | date : 'MMM d, y h:mm:ss a'}}</td>
                         </tr>
