--- a/code/dev/parts/reports/charts/fbt-distribution.html
+++ b/code/dev/parts/reports/charts/fbt-distribution.html
@@ -52,8 +52,9 @@
   <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
+  <p align="center">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  Loading</p>
 </div>
 <div ng-hide="!traffic.labels || !traffic.labels.length">
 
