--- a/code/dev/parts/reports/charts/mobile-hits.html
+++ b/code/dev/parts/reports/charts/mobile-hits.html
@@ -26,8 +26,9 @@
   <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
+  <p align="center">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  Loading</p>
 </div>
 <div ng-hide="!traffic.labels || !traffic.labels.length">
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="hitsChartOptions"></div>
