--- a/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
+++ b/code/dev/parts/reports/charts/mobile-top-objects-5xx.html
@@ -17,7 +17,7 @@
 
 <div class="alert alert-info" ng-if="_loading">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  <p align="center">Loading</p>
 </div>
 
 <div ng-if="!_loading">
