--- a/code/dev/parts/reports/charts/requests.html
+++ b/code/dev/parts/reports/charts/requests.html
@@ -1,18 +1,26 @@
-<h3 class="reports_charts_title">Bandwidth Usage</h3>
-<div filter-time-periods
+<div class="row">
+  <div class="col-md-2"><h4 class="reports_charts_title, headerh3" style="   margin-top: -26px;
+    font-size: 16px;
+    margin-right: 2px;
+    margin-left: 5px;">Bandwidth Usage</h4></div>
+  <div class="col-md-10">
+<div class="buttonpanel" filter-time-periods
      ng-hide="!ngDomain"
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
      ng-filters="filters"
-     on-filter="reloadTrafficStats()"></div>
+     on-filter="reloadTrafficStats()"></div></div>
+  </div>
 <div class="alert alert-info" ng-if="!_loading && (!ngDomain || !traffic.labels.length)">
   <p align="center">No data to display</p>
 </div>
 <div class="alert alert-info" ng-if="_loading">
+  <p align="center">
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
-  Loading
+  Loading</p>
 </div>
-<div class="auto-scroll" ng-hide="!traffic.labels || !traffic.labels.length">
+<div class="container1 auto-scroll" ng-hide="!traffic.labels || !traffic.labels.length">
   <div style="min-width: 500px; min-height: 350px" line-chart ng-data="traffic" ng-chart-options="chartOptions"></div>
 </div>
+
