--- a/code/dev/parts/reports/general.html
+++ b/code/dev/parts/reports/general.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="row">
         <div class="col-md-12">
             <h2>General</h2>
@@ -50,20 +50,21 @@
                             <small>Average TTFB Time For Last One Hour</small>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="col-lg-12 nd-block">
+                    
+                    <div class="row" style="background: white; margin-bottom: 15px;">
+                        <div class="col-lg-12">
+                            <div class="col-lg-12  border12">
                                 <div requests-chart ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
-                        <div class="col-lg-6">
-                            <div class="col-lg-12 nd-block">
+                        <div class="col-lg-12">
+                            <div class="col-lg-12  border12">
                                 <div proxy-traffic-chart status-codes="statusCode.labels" ng-domain="vm.model.domain"></div>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-lg-4">
+                        <div class="col-lg-12">
                             <div class="col-sm-12 nd-block">
                                 <h3>HTTP/HTTPS Requests Ratio</h3>
                                 <div class="alert alert-info" ng-if="!protocol || !protocol.length">
@@ -74,7 +75,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-12">
                             <div class="col-sm-12 nd-block">
                                 <h3>Edge Cache Hit/Miss Ratio</h3>
                                 <div class="alert alert-info" ng-if="!cacheStatus || !cacheStatus.length">
@@ -85,7 +86,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-4">
+                        <div class="col-lg-12">
                             <div class="col-sm-12 nd-block">
                                 <h3>HTTP Methods</h3>
                                 <div class="alert alert-info" ng-if="!httpMethod || !httpMethod.length">
@@ -97,7 +98,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
+                    <div class="row"">
                         <div class="col-md-6">
                             <div class="col-sm-12 nd-block">
                                 <div top-requests ng-domain="vm.model.domain"></div>
