--- a/code/dev/parts/reports/proxy.html
+++ b/code/dev/parts/reports/proxy.html
@@ -1,17 +1,20 @@
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-md-12">
-      <h2>Proxy Traffic Reports</h2>
-    </div>
-  </div>
+  <!--<div class="row">-->
+    <!--<div class="col-md-12">-->
+      <!--<h2>Proxy Traffic Reports</h2>-->
+    <!--</div>-->
+  <!--</div>-->
 
   <div class="row">
     <div class="col-md-12">
       <div class="panel panel-default">
         <div class="panel-heading">
+          <div class="col-md-6">
+            <h2>Proxy Traffic Reports</h2>
+          </div><p>&nbsp; </p>
           <div class="row">
-            <div class="col-md-12">
-              <div class="pull-left">
+            <div class="col-md-6">
+              <div class="pull-right">
                 <form class="form-inline">
                   <div class="form-group">
                     <div domain-select ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
@@ -24,14 +27,14 @@
         <div class="panel-body">
 
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div requests-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div proxy-traffic-chart
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
@@ -42,14 +45,14 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div http-https-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div http-status-code-chart
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
@@ -60,7 +63,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div request-status-chart
                    status-codes="statusCode.labels"
                    fl-os="os.labels"
@@ -68,7 +71,7 @@
                    fl-country="countries"
                    ng-domain="domain"></div>
             </div>
-            <div class="col-lg-6">
+            <div class="col-lg-12, border12">
               <div hits-cache-chart
                    fl-os="os.labels"
                    fl-device="device.labels"
