--- a/code/dev/parts/users/edit.html
+++ b/code/dev/parts/users/edit.html
@@ -85,7 +85,6 @@
               <select class="form-control"
                       id="role"
                       ng-model="model.role"
-                      ng-disabled="model.role == 'reseller'"
                       ng-options="role for role in roles">
                 <option value="">--- Select Role ---</option>
               </select>
@@ -162,7 +161,7 @@
               <div disable-two-factor-auth ng-user-id="params.id"></div>
             </div>
             <br />
-            <h6 >&nbsp;	&nbsp;	&nbsp; &nbsp; &nbsp;	Go to Security Settings to Enable Two Factor Authentication.</h6>
+            <h6 >&nbsp;	&nbsp;	&nbsp; &nbsp; &nbsp;	Two Factor Authentication (2FA) can be only enabled by user itself, and cannot be enabled by account administrator for another user of the account. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2FA for a user can be disabled by a user or account administrator." Security Settings to Enable Two Factor Authentication.</h6>
           </div>
           <hr>
 
