--- a/code/dev/parts/users/new.html
+++ b/code/dev/parts/users/new.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Add new User
+      Add New User
     </h2>
   </div>
 </div>
@@ -38,7 +38,7 @@
                      class="form-control"
                      id="email"
                      placeholder="Email"
-                     ng-model="model.user_email"
+                     ng-model="model.email"
                      ng-disabled="_loading"
                      name="userform.email">
 
@@ -63,7 +63,7 @@
                       name="userform.firstname"
                      ng-pattern="/^[a-z0-9]+$/i" required/>
 
-              <span ng-show="!!userform['userform.firstname'].$error.pattern" style="color:red">First letter must contain letters, spaces and _ only. </span>
+              <span ng-show="!!userform['userform.firstname'].$error.pattern" style="color:red">First Name must contain letters, spaces and _ only. </span>
             </div>
           </div>
           <div class="form-group">
@@ -82,7 +82,7 @@
                      name="userform.lastname"
                      ng-pattern="/^[a-z0-9]+$/i" required/>
 
-              <span ng-show="!!userform['userform.lastname'].$error.pattern" style="color:red">First letter must contain letters, spaces and _ only. </span>
+              <span ng-show="!!userform['userform.lastname'].$error.pattern" style="color:red">First Name must contain letters, spaces and _ only. </span>
             </div>
           </div>
 
@@ -196,7 +196,10 @@
                      class="form-control"
                      id="passwordConfirm"
                      ng-model="model.passwordConfirm"
-                     ng-disabled="_loading">
+                     ng-disabled="_loading"
+                     name="userform.confirmPassword">
+              <span ng-show="model.password !== model.passwordConfirm" style="color:red">Passwords do not match.</span>
+
             </div>
           </div>
 
