--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -121,7 +121,15 @@
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
 
 <script src="config.js"></script>
-
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create',  window.gaAccount, 'auto');
+</script>
+<!-- End Google Analytics -->
 <!-- build:js scripts/compiled.js -->
 <script type="text/javascript" src="js/portal/config/config.module.js"></script>
 <script type="text/javascript" src="js/portal/config/config.constants.js"></script>
@@ -319,6 +327,7 @@
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
 <script type="text/javascript" src="js/portal/app.run.js"></script>
+<script type="text/javascript" src="js/portal/app.ga.js"></script>
 <!-- endbuild -->
 </body>
 </html>
