--- a/code/index.html
+++ b/code/index.html
@@ -121,7 +121,15 @@
 <script type="text/javascript" src="js/heatmaps/highmap.world.js"></script>
 
 <script src="config.js"></script>
-
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+ga('create',  window.gaAccount, 'auto');
+</script>
+<!-- End Google Analytics -->
 <script src="scripts/compiled.js"></script>
 </body>
 </html>
