--- a/code/dev/parts/domains/list.html
+++ b/code/dev/parts/domains/list.html
@@ -105,6 +105,10 @@
                   <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
                 </th>
                 <th class="thin">Status</th>
+                <th class="account" ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                  <a href="" ng-click="order('companyName')">Account</a>
+                  <span class="sortorder" ng-show="filter.predicate === 'companyName'" ng-class="{reverse: filter.reverse}"></span>
+                </th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -120,6 +124,9 @@
                 <td>
                   <div domain-staging-status ng-id="item.id"></div>
                 </td>
+                <td ng-if="auth.isReseller() ||  auth.isRevadmin()">
+                  <div>{{item.companyName}}</div>
+                </td>
                 <td class="actions">
                   <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>
                   <a ui-sref=".edit({id: item.id})" ng-if="!item.loading" tooltip="Edit Domain">
@@ -128,7 +135,7 @@
                   <!-- <a ui-sref=".advanced({id: item.id})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a> -->
-                    <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
+                  <a ui-sref=".edit({id: item.id,isAdvanced:true})" ng-if="!item.loading" tooltip="Advanced Edit Domain">
                     <i class="glyphicon glyphicon-cog"></i>
                   </a>
                   <a href="" ng-if="!item.loading" ng-click="deleteDomain(item)" tooltip="Delete Domain">
