--- a/code/dev/parts/apps/edit.html
+++ b/code/dev/parts/apps/edit.html
@@ -55,6 +55,14 @@
               <input type="text" class="form-control" name="app_name" ng-disabled="_loading" ng-model="model.app_name" ng-maxlength="50" id="app_name">
             </div>
           </div>
+          <div class="form-group" ng-if="auth.isReseller() || auth.isRevadmin()">
+            <label for="account_id" popover-append-to-body="{{true}}" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Select company name the application name should be associated with">Company</label>
+            <div class="col-sm-10">
+              <select class="form-control" ng-disabled="_loading" ng-model="model.account_id" id="account_id" ng-options="obj.id as obj.companyName for obj in companies">
+                <option value="">--- Select Company ---</option>
+              </select>
+            </div>
+          </div>
           <div class="form-group">
             <label for="key" class="col-sm-2 control-label">SDK Key</label>
             <div class="col-sm-10">
