--- a/code/parts/profile/directives/subscription-summary.tpl.html
+++ b/code/parts/profile/directives/subscription-summary.tpl.html
@@ -6,7 +6,7 @@
       </colgroup>
       <tr>
         <td>Current Billing Plan</td>
-        <td>{{subscription.product_name}} <a tooltip="Change Billing Plan" ui-sref="iindex.billing.plans" class="btn btn-xs btn-primary"><i class=" fa fa-arrow-circle-up"></i></a></td>
+        <td>{{subscription.product_name}} <a tooltip="Change Billing Plan" ui-sref="index.billing.plans" class="btn btn-xs btn-primary"><i class=" fa fa-arrow-circle-up"></i></a></td>
       </tr>
       <tr>
         <td>Total Payments</td>
