--- a/code/parts/users/new.html
+++ b/code/parts/users/new.html
@@ -24,7 +24,7 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal">
+        <form name="createForm" class="form-horizontal">
           <div class="form-group">
             <label for="email"
                    popover-append-to-body="{{true}}"
@@ -124,7 +124,6 @@
                       ng-options="domain.domain_name as domain.domain_name for domain in domains"></select>
             </div>
           </div>
-
           <hr>
           <div class="form-group">
             <label for="access_control_list"
@@ -183,6 +182,15 @@
             </div>
           </div>
 
+          <hr>
+          <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid &&
+                                      createForm.comment.$dirty }">
+            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Comment">Comment</label>
+            <div class="col-sm-5">
+              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              </textarea>
+            </div>
+          </div>
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
