--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -166,6 +166,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
 
 <script type="text/javascript" src="js/portal/auth/auth.module.js"></script>
@@ -224,8 +225,13 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/domains/origin-request-headers/originRequestHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/end-user-response-headers/endUserResponseHeaders.directive.js"></script>
 <script type="text/javascript" src="js/portal/domains/controller/domainsCrud.controller.js"></script>
-<script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script>
+<!-- TODO: delete - depricated <script type="text/javascript" src="js/portal/domains/controller/domainConfigureAdvanced.controller.js"></script> -->
 <script type="text/javascript" src="js/portal/domains/controller/domainVersions.controller.js"></script>
+
+<script type="text/javascript" src="js/portal/ssl_certs/ssl_certs.module.js"></script>
+<script type="text/javascript" src="js/portal/ssl_certs/ssl_certs.routes.js"></script>
+<script type="text/javascript" src="js/portal/ssl_certs/controller/ssl_certsCrud.controller.js"></script>
+<script type="text/javascript" src="js/portal/ssl_certs/cert-staging-status/certStagingStatus.directive.js"></script>
 
 <script type="text/javascript" src="js/portal/companies/companies.module.js"></script>
 <script type="text/javascript" src="js/portal/companies/companies.routes.js"></script>
