--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -68,6 +68,10 @@
                     <i class="sub-menu-icon fa fa-list"></i>
                     Domains
                 </a>
+                  <a ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
+                    <i class="sub-menu-icon fa fa-lock"></i>
+                    SSL Certs
+                </a>
                 <a ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-trash"></i>
                     Purge Cache
