--- a/code/parts/domains/edit.html
+++ b/code/parts/domains/edit.html
@@ -48,7 +48,7 @@
             </div>
           </div>
         </div>
-        <form class="form-horizontal" novalidate ng-show="!isAdvancedMode">
+        <form class="form-horizontal" name="editForm" novalidate ng-show="!isAdvancedMode">
           <div class="form-group">
             <label for="domain_name" class="col-sm-3 control-label" popover-trigger="mouseenter">Domain Name</label>
             <div class="col-sm-9">
@@ -197,6 +197,14 @@
             <div class="col-md-9">
               <toggle-switch ng-disabled="_loading" ng-model="model.rev_component_bp.enable_cache" on-label="On" off-label="Off">
               </toggle-switch>
+            </div>
+          </div>
+          <div class="form-group" ng-class="{ 'has-error': editForm.comment.$invalid &&
+                                      editForm.comment.$dirty }">
+            <label for="comment" class="col-sm-3 control-label" popover-trigger="mouseenter" popover="Comment">Comment</label>
+            <div class="col-md-6">
+              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              </textarea>
             </div>
           </div>
           <hr>
