--- a/code/parts/domains/new.html
+++ b/code/parts/domains/new.html
@@ -26,7 +26,7 @@
 
       </div>
       <div class="panel-body">
-        <form class="form-horizontal" ng-submit="createDomain(model)">
+        <form class="form-horizontal" ng-submit="createDomain(model)" name="createForm">
           <div class="form-group">
             <label for="domain_name"
                    popover-append-to-body="{{true}}"
@@ -129,7 +129,14 @@
             </div>
           </div>
           -->
-
+          <div class="form-group" ng-class="{ 'has-error': createForm.comment.$invalid &&
+                                      editForm.comment.$dirty }">
+            <label for="comment" class="col-sm-2 control-label" popover-trigger="mouseenter" popover="Comment">Comment</label>
+            <div class="col-md-5">
+              <textarea id="comment" placeholder="Comment (max 300 symbol)" class="form-control" name="comment" ng-model="model.comment" ng-disabled="_loading">
+              </textarea>
+            </div>
+          </div>
           <hr>
           <div class="form-group">
             <div class="col-sm-offset-2 col-sm-10">
