Update "SSL Certificates"

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -70,7 +70,7 @@
                 </a>
                   <a ui-sref-active="active" ui-sref="index.webApp.ssl_certs" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-lock"></i>
-                    SSL Certs
+                    SSL Certificates
                 </a>
                 <a ui-sref-active="active" ui-sref="index.webApp.cache" class="side-menu-sub-item">
                     <i class="sub-menu-icon fa fa-trash"></i>
