Fixed domain name in Edit Domain page title

--- a/code/dev/parts/domains/edit.html
+++ b/code/dev/parts/domains/edit.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-sm-12">
     <h2 class="pull-left page-title">
-      Edit Domain {{model.domain_name}}
+      Edit Domain <strong ng-if="modelInfo.domain_name">{{modelInfo.domain_name}}</strong>
     </h2>
   </div>
 </div>
