--- a/code/parts/companies/list.html
+++ b/code/parts/companies/list.html
@@ -91,7 +91,7 @@
                 <a href="" ng-click="order('updated_at')">Last Update</a>
                 <span class="sortorder" ng-show="filter.predicate === 'updated_at'" ng-class="{reverse: filter.reverse}"></span>
               </th>
-              <th class="col-lg-1 text-right">Actions</th>
+              <th class="col-lg-1">Actions</th>
             </tr>
             </thead>
             <tbody>
