Added to the billing plans page a note about one month free trial

--- a/code/dev/parts/signup/form-billing-plans.tpl.html
+++ b/code/dev/parts/signup/form-billing-plans.tpl.html
@@ -6,7 +6,7 @@
           <div class="col-md-12">
             <div class="text-center">
               <h4 class="">
-                                    The world of mobile app and web acceleration is just a few minutes away.<br> Please select your RevAPM billing plan:
+                                    The world of mobile app and web acceleration is just a few minutes away.<br> Please select your RevAPM billing plan <b>(one month free trial)</b>:
                                 </h4>
             </div>
           </div>
