Create new module "logshippers"

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -166,6 +166,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/resources/model/activity.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/2fa.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/keys.factory.js"></script>
+<script type="text/javascript" src="js/portal/resources/model/log_shipping_jobs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_certs.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/ssl_conf_profiles.factory.js"></script>
 <script type="text/javascript" src="js/portal/resources/model/apps.factory.js"></script>
@@ -330,6 +331,11 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.module.js"></script>
 <script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.values.js"></script>
 <script type="text/javascript" src="js/portal/bluetriangletech/services/BTTPortal.service.js"></script><!-- //BlueTriangleTech-->
+<!-- LogShippers -->
+<script type="text/javascript" src="js/portal/logshippers/logshippers.module.js"></script>
+<script type="text/javascript" src="js/portal/logshippers/logshippers.routes.js"></script>
+<script type="text/javascript" src="js/portal/logshippers/controller/logshippers.controller.js"></script>
+<!-- // LogShippers -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
