Save new directive "logshippersStagingStatus.directive" and changes in "Log Shipping Jobs" list

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -335,6 +335,7 @@ ga('create',  window.gaAccount, 'auto');
 <script type="text/javascript" src="js/portal/logshippers/logshippers.module.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/logshippers.routes.js"></script>
 <script type="text/javascript" src="js/portal/logshippers/controller/logshippers.controller.js"></script>
+<script type="text/javascript" src="js/portal/logshippers/logshippers-staging-status/logshippersStagingStatus.directive.js"></script>
 <!-- // LogShippers -->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
